--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 spring.application.name=microservicio-zuul
 server.port=8090
+server.connection-timeout=-1
 
 #eureka.client.service-url.defaultZone=http://localhost:/8761/eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 zuul.routes.usuarios.service-id=microservicio-usuario
 zuul.routes.usuarios.path=/api/alumnos/**
+
+zuul.routes.examenes.service-id=microservicio-examenes
+zuul.routes.examenes.path=/api/examenes/**
+
+zuul.routes.cursos3.service-id=microservicio-cursos3
+zuul.routes.cursos3.path=/api/cursos3/**
+
+zuul.routes.respuestas.service-id=microservicio-respuestas
+zuul.routes.respuestas.path=/api/respuestas/**
+
